--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.1.3",
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-upload-client": "^8.0.0",
+    "axios": "^0.18.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
@@ -15,13 +16,8 @@
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-recaptcha": "^2.3.7",
-    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
