--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dropzone": "^4.2.9",
     "react-recaptcha": "^2.3.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-toastify": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
