--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
+    "izitoast": "^1.3.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.0",
     "react-dom": "^16.2.0",
